--- a/styles.css
+++ b/styles.css
@@ -9,31 +9,24 @@ body {
 }
 
 #main-header {
+    height:5rem;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 60px;   
-    position: absolute;
-    width: 100%;
-    box-sizing: border-box;
-    top:0;
-    left:0;
-    right:1;
+    padding: 0px 5%;   
     background-color: rgb(26, 25, 25);
 }
 
-nav li {
-    margin-left: 20px;
+#main-header  li {
+    margin-left: 1rem;
 }
 
-nav a {
+#logo {
     color: rgb(185, 131, 31);
-    font-size: 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
     text-decoration: none;
-    padding: 12px;
-    text-shadow: 1px 1px 2px rgb(0,0,0,0.2);
-    border-radius: 6px;
+    text-transform: uppercase;
 }
 
 nav a:hover {
@@ -42,10 +35,10 @@ nav a:hover {
 }
 
 #main-header a {
-    padding: 10px;
+    
     font-family: "Oleo Script",sans-serif;
     color:rgb(185, 131, 31);
-    font-size: 24px;
+    font-size: 1.25rem;
     text-decoration:none;
     text-transform: uppercase;
     text-shadow: 1px 1px 2px black;
@@ -70,20 +63,20 @@ nav a:hover {
 main h1 {
     color:rgb(185, 131, 31);
     margin:100px auto 24px auto;  
-    font-size: 48px;
+    font-size: 3rem;
     text-align: center;
 }
 
 #latest-products {
     width: 80%;
-    margin:50px auto;
+    margin:2rem auto;
 }
 
 #latest-products ul {
     display:grid;
     list-style: none;
     grid-template-columns: 1fr 1fr;
-    gap:16px;
+    gap:1rem;
     margin: 0;
     padding: 0;
     
@@ -92,19 +85,20 @@ main h1 {
     background-color: rgb(228,206,182);
     border-radius: 6px;
     overflow: hidden;
+ 
     
 }
 
 
 .food-items img {
-    height:240px;
+    height:15rem;
     width: 100%;
     object-fit: cover;
     
 }
 
 .food-item-content {
-    padding: 16px;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -112,7 +106,7 @@ main h1 {
     background-color: rgb(228,157,44);
     color: white;
     border-radius: 4px;
-    padding: 8px 24px ;
+    padding: 0.5rem 1.5rem;
     text-decoration: none;
 }
 .btn:hover{
