--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     background-color: rgb(59, 59, 56);
 }
 
+.menu-btn {
+    display: none;
+}
+
 #main-header {
     height:5rem;
     display: flex;
@@ -59,6 +63,8 @@ nav a:hover {
 #main-header ul a {
     text-decoration: none;
 }
+
+
 
 main h1 {
     color:rgb(185, 131, 31);
@@ -112,3 +118,44 @@ main h1 {
 .btn:hover{
     background-color:rgb(238, 177, 80);
 }
+
+
+
+@media(max-width: 48rem) {
+
+    .menu-btn {
+        width: 3rem; 
+        height: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .menu-btn span{
+        width: 100%;
+        height: 3px;
+        background-color: white; 
+        
+    }
+    main h1 {
+        
+        font-size: 1.5rem;
+        
+    }
+
+    #main-header ul {
+        display:none;
+    }
+
+
+    #latest-products ul {
+      
+        grid-template-columns: 100%;
+        margin: 0;
+        padding: 0;
+        
+    }
+
+
+}
+
