--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,57 @@ nav a:hover {
 #main-header a:hover{
     background-color: transparent;
 }
+
+#side-drawer {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(29, 26, 27);
+    position: fixed;
+    top:0;
+    left:0;
+    display: none;
+
+
+   
+}
+#side-drawer:target {
+    display: block;
+}
+
+#side-drawer header {
+    height: 5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0px 5%;   
+ 
+
+}
+
+#side-drawer ul{
+    list-style: none;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+    padding: 4rem 1rem;
+}
+
+#side-drawer li {
+    margin: 1rem 0;
+
+}
+
+#side-drawer a{
+    font-family: "Oleo Script",sans-serif;
+    color:rgb(253, 239, 213);
+    font-size: 2rem;
+    text-decoration:none;
+    text-transform: uppercase;
+    
+}
+
 #main-header ul {
     list-style:none;
     margin: 0;
@@ -100,6 +151,12 @@ main h1 {
     height:15rem;
     width: 100%;
     object-fit: cover;
+    
+}
+
+.food-items img h2{
+ 
+    margin: 0 0 1rem 0;
     
 }
 
